// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`migrateToEndpoint ignore when endpoint present 1`] = `
Object {
  "input": "endpoint: https://eu1.prisma.sh/public-asdf/my-service/dev
datamodel: datamodel.prisma",
  "output": "#endpoint: https://eu1.prisma.sh/public-asdf/my-service/dev
endpoint: 
datamodel: datamodel.prisma",
}
`;

exports[`migrateToEndpoint work in simple case 1`] = `
Object {
  "input": "service: my-service
stage: dev
cluster: public-asdf/prisma-eu1
datamodel: datamodel.prisma",
  "output": "#service: my-service
#stage: dev
#cluster: public-asdf/prisma-eu1
datamodel: datamodel.prisma
endpoint: https://eu1.prisma.sh/public-asdf/my-service/dev
",
}
`;

exports[`migrateToEndpoint work with different order and respect comments 1`] = `
Object {
  "input": "# don't delete me
stage: dev
cluster: public-asdf/prisma-eu1

service: my-service



datamodel: datamodel.prisma",
  "output": "# don't delete me
#stage: dev
#cluster: public-asdf/prisma-eu1

#service: my-service



datamodel: datamodel.prisma
endpoint: https://eu1.prisma.sh/public-asdf/my-service/dev
",
}
`;

exports[`replaceYamlValue when comments already exist 1`] = `
Object {
  "input": "#anothercomment: asdasd
endpoint: https://eu1.prisma.sh/public-asdf/my-service/dev

#endpoint: asdasd
datamodel: datamodel.prisma",
  "output": "#anothercomment: asdasd
#endpoint: https://eu1.prisma.sh/public-asdf/my-service/dev
endpoint: http://localhost:4466

#endpoint: asdasd
datamodel: datamodel.prisma",
}
`;

exports[`replaceYamlValue when document is clean 1`] = `
Object {
  "input": "endpoint: https://eu1.prisma.sh/public-asdf/my-service/dev
datamodel: datamodel.prisma",
  "output": "#endpoint: https://eu1.prisma.sh/public-asdf/my-service/dev
endpoint: http://localhost:4466
datamodel: datamodel.prisma",
}
`;

exports[`replaceYamlValue when key does not yet exist 1`] = `
Object {
  "input": "datamodel: datamodel.prisma",
  "output": "datamodel: datamodel.prisma
endpoint: http://localhost:4466
",
}
`;
